--- a/style.css
+++ b/style.css
@@ -343,7 +343,6 @@ header {
   font-weight: var(--fw-header);
   text-transform: uppercase;
   line-height: 4rem;
-  margin: auto;
 }
 
 .content-grid-4x2 #content-grid-4x2-button {
@@ -444,6 +443,9 @@ header {
 }
 
 @media (max-width: 1024px) {
+  .content-grid-4x2 .header-container h2 {
+    margin: auto;
+  }
   .content-grid-4x2 .content-container ul {
     grid-template-columns: repeat(2, 1fr);
   }
